fix: smaller li spacing

--- a/src/theme-src/css/lists.css
+++ b/src/theme-src/css/lists.css
@@ -10,7 +10,7 @@
         @apply list-latin my-4 pl-5;
       }
       & li {
-        @apply pl-1 sm:pl-3 my-4;
+        @apply pl-1 my-4;
         &::marker {
           @apply font-medium text-gray-dark;
         }
@@ -22,7 +22,7 @@
     & ul {
       @apply list-disc my-4 pl-5;
       & li {
-        @apply pl-1 sm:pl-3 my-4;
+        @apply pl-1 my-4;
         &::marker {
           @apply text-gray-light;
         }
